--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id=title>
     <h1>基本資料表</h1>
         <ul>
-            <li onlick ><a href="./%E8%B3%87%E5%B7%A5%E7%B3%BB%E8%80%81%E5%B8%AB%E4%BB%8B%E7%B4%B9%E7%AC%AC%E4%BA%8C%E9%A0%81.html">下一頁</a></li>
+            <li onlick ><a href="./page2.html">下一頁</a></li>
         </ul>
     </div>
 <div id ="table1">
